ingestion entities api
